--- a/produit-service1.properties
+++ b/produit-service1.properties
@@ -1,4 +1,4 @@
 spring.data.mongodb.host=172.17.0.2
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=produits
-eureka.client.serviceUrl.defaultZone=http://172.17.0.6:8761
+eureka.client.service-url.default-zone=http://172.17.0.6:8761/eureka
