--- a/produit-service2.properties
+++ b/produit-service2.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.host=172.17.0.4
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=produits
+eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://172.17.0.6:8761}/eureka/
