--- a/lignecommmande.properties
+++ b/lignecommmande.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=32768
-spring.data.mongodb.database=produits
+spring.data.mongodb.port=32770
+spring.data.mongodb.database=ligneproduit
