--- a/commande-service.properties
+++ b/commande-service.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=32771
-spring.data.mongodb.database=lignecommande
+spring.data.mongodb.database=commande
