--- a/lignecommmande.properties
+++ b/lignecommmande.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=32768
 spring.data.mongodb.database=ligneproduit
+eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://172.17.0.6:8761}/eureka/
