--- a/commande-service.properties
+++ b/commande-service.properties
@@ -1,3 +1,4 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=32771
+spring.data.mongodb.host=172.17.0.2
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=commande
+eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://172.17.0.6:8761}/eureka/
