--- a/commande-service1.properties
+++ b/commande-service1.properties
@@ -1,1 +1,4 @@
-
+spring.data.mongodb.host=172.17.0.8
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=commande
+eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://localhost:8761}/eureka/
