--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -2,7 +2,7 @@
 server.port 9004
 
 #Eureka
-eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+eureka.client.serviceUrl.defaultZone: http://172.17.0.10/eureka/
 
 #Spring Security
 spring.security.user.name=utilisateur
