--- a/EmployeeEurekaServer.properties
+++ b/EmployeeEurekaServer.properties
@@ -1,4 +1,4 @@
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
-eureka.server.enableSelfPreservation=false
+#eureka.server.enableSelfPreservation=false
 server.port=8761
