--- a/produit-service1.properties
+++ b/produit-service1.properties
@@ -1,4 +1,4 @@
 spring.data.mongodb.host=mongo-produit1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=produits
-eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-service-ins:8761}/eureka/
+eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
