--- a/EmployeeEurekaServer.properties
+++ b/EmployeeEurekaServer.properties
@@ -2,3 +2,4 @@ eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
 #eureka.server.enableSelfPreservation=false
 server.port=8761
+eureka.client.healthcheck.enabled=true
