--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -3,7 +3,7 @@ server.port 9004
 
 #Eureka
 #eureka.client.serviceUrl.defaultZone: http://172.17.0.10:8761/eureka/
-eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
+eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
 
 #Spring Security
 spring.security.user.name=utilisateur
