--- a/produit-service2.properties
+++ b/produit-service2.properties
@@ -2,5 +2,6 @@ server.port=8085
 spring.data.mongodb.host=mongo-produit2
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=produits
-eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
+#eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
+eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
 spring.application.name=produit-service1
