--- a/lignecommmande.properties
+++ b/lignecommmande.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.host=mongo-lignecommande1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=ligneproduit
-eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
+#eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
+eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
