--- a/commande-service1.properties
+++ b/commande-service1.properties
@@ -1,4 +1,5 @@
 spring.data.mongodb.host=172.17.0.8
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=commande
-eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://172.17.0.10:8761}/eureka/
+#eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://172.17.0.10:8761}/eureka/
+eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
