--- a/produit-service1.properties
+++ b/produit-service1.properties
@@ -3,3 +3,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=produits
 #eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
 eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
+eureka.client.healthcheck.enabled=true
