--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -4,6 +4,7 @@ server.port 9004
 #Eureka
 #eureka.client.serviceUrl.defaultZone: http://172.17.0.10:8761/eureka/
 eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
+eureka.client.healthcheck.enabled: true
 
 #Spring Security
 spring.security.user.name=utilisateur
