--- a/EmployeeEurekaServer.properties
+++ b/EmployeeEurekaServer.properties
@@ -1,6 +1,6 @@
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
-eureka.server.enableSelfPreservation: false
+eureka.server.enableSelfPreservation: true
 #eureka.server.enableSelfPreservation=false
 server.port=8761
 eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
