--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -5,7 +5,7 @@ server.port 9004
 #eureka.client.serviceUrl.defaultZone: http://172.17.0.10:8761/eureka/
 eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
 eureka.client.healthcheck.enabled: true
-eureka.client.instanceInfoReplicationIntervalSeconds=5
+#eureka.client.instanceInfoReplicationIntervalSeconds=5
 
 #Spring Security
 spring.security.user.name=utilisateur
