--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -6,6 +6,9 @@ server.port 9004
 eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
 eureka.client.healthcheck.enabled: true
 #eureka.client.instanceInfoReplicationIntervalSeconds=5
+zuul.host.socket-timeout-millis=60000
+zuul.host.connect-timeout-millis=10000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 
 #Spring Security
 spring.security.user.name=utilisateur
