--- a/produit-service1.properties
+++ b/produit-service1.properties
@@ -4,3 +4,6 @@ spring.data.mongodb.database=produits
 #eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
 eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
 spring.application.name=produit-service
+eureka.instance.lease-renewal-interval-in-seconds=1
+eureka.instance.lease-expiration-duration-in-seconds=2
+ribbon.eureka.enabled=true
