--- a/lignecommmande.properties
+++ b/lignecommmande.properties
@@ -3,13 +3,13 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.database=ligneproduit
 #eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
 eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
-feign.hystrix.enabled: true
-hystrix.threadpool.default.coreSize: 15
-hystrix.command.default.execution.isolation.strategy: THREAD
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 2000
+#feign.hystrix.enabled: true
+#hystrix.threadpool.default.coreSize: 15
+#hystrix.command.default.execution.isolation.strategy: THREAD
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 2000
  
-ribbon.ReadTimeout: 400
-ribbon.ConnectTimeout: 100
-ribbon.OkToRetryOnAllOperations: true
-ribbon.MaxAutoRetries: 1
-ribbon.MaxAutoRetriesNextServer: 1
+#ribbon.ReadTimeout: 400
+#ribbon.ConnectTimeout: 100
+#ribbon.OkToRetryOnAllOperations: true
+#ribbon.MaxAutoRetries: 1
+#ribbon.MaxAutoRetriesNextServer: 1
