--- a/zuul-server.properties
+++ b/zuul-server.properties
@@ -3,7 +3,7 @@ server.port 9004
 
 #Eureka
 #eureka.client.serviceUrl.defaultZone: http://172.17.0.10:8761/eureka/
-eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 eureka.client.healthcheck.enabled: true
 #eureka.client.instanceInfoReplicationIntervalSeconds=5
 zuul.host.socket-timeout-millis=60000
