--- a/EmployeeEurekaServer.properties
+++ b/EmployeeEurekaServer.properties
@@ -3,4 +3,4 @@ eureka.client.register-with-eureka=false
 eureka.server.enableSelfPreservation: false
 #eureka.server.enableSelfPreservation=false
 server.port=8761
-eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
