--- a/produit-service1.properties
+++ b/produit-service1.properties
@@ -2,7 +2,7 @@ spring.data.mongodb.host=mongo-produit1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=produits
 #eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
-eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 spring.application.name=produit-service
 eureka.instance.lease-renewal-interval-in-seconds=1
 eureka.instance.lease-expiration-duration-in-seconds=2
