--- a/lignecommmande.properties
+++ b/lignecommmande.properties
@@ -2,7 +2,7 @@ spring.data.mongodb.host=mongo-lignecommande1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=ligneproduit
 #eureka.client.service-url.defaultZone=${vcap.services.eureka-service.credentials.uri:http://eureka-microservice-ins:8761}/eureka/
-eureka.client.serviceUrl.defaultZone: http://eureka-microservice-ins:8761/eureka/
+eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
 feign.hystrix.enabled: true
 hystrix.threadpool.default.coreSize: 15
 hystrix.command.default.execution.isolation.strategy: THREAD
