--- a/ged-service.properties
+++ b/ged-service.properties
@@ -1,3 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5433/ged
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #server.port=8087
 # App Properties
